# Mintable-Business-Card

./: BusinessCardNFT.abi  Cargo.toml  DIDRegistry.abi  README.md  RUN.txt  deploy.js  output.txt  package-lock.json  package.json  readCard.js
abi/: BusinessCardNFT.abi
contracts/: BusinessCardNFT.vy  DIDRegistry.vy  Escrow.vy
deploy-script/: deploy-escrow.js  package-lock.json  package.json
src/: arweave.rs  ethereum.rs  main.rs  verifier.rs
