[package]
name = "zkp_verification"
version = "0.1.0"
edition = "2021"

[dependencies]
# Ethereum interactions
ethers = { version = "2", features = ["abigen", "rustls"] }

# Arkworks for ZKP (Groth16) and BN254 curve
ark-groth16 = "0.4"
ark-bn254 = "0.4"
ark-serialize = "0.4"
ark-ff = "0.4"

# Async runtime and HTTP client
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hex decoding for proof bytes
hex = "0.4"
